<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">
    <LinearLayout
        android:layout_marginTop="0.1in"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="24pt"
            android:text="@string/agenda"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="0.3in"
            android:textSize="8pt"
            android:text="@string/desenvolvido_por"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/jairo_chaves"
            android:textSize="14pt"

            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
    <Button
        android:id="@+id/btn_dados"
        android:layout_marginTop="0.6in"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:textSize="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/branco"
        android:text="@string/dados"/>
    <Button
        android:id="@+id/btn_view_inicial"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"
        android:textSize="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/branco"
        android:text="@string/view"/>

</LinearLayout>